--- a/webpage/iso.html
+++ b/webpage/iso.html
@@ -1,10 +1,18 @@
-<table class="tborder" cellpadding="6" cellspacing="0" border="1" width="100%" align="center">
-<tr><td>posttime</td><td>
+Thread title<br>
+All times are US East Coast time (daylight saving adjusted)
+
+<br><br>
+
+<table class="tborder" cellpadding="4" cellspacing="0" border="1" width="100%" align="center">
+<tr><td>
+Poster (posterid)<br>
+posttime<br>
+Post number</td><td>
 <div id="post_message_43223966">
 			
 			Lil rascal made it. Sup bro
 		</div>
-</td></tr>
+</td><td>quote</td></tr>
 <tr><td>posttime</td><td>	
 <div id="post_message_43223969">
 			
@@ -27,7 +35,7 @@ See y'all later on</div>
 	</table>
 </div>Your day sounds better than mine.
 		</div>
-</td></tr>
+</td><td>quote</td></tr>
 <tr><td>posttime</td><td>	
 
 <div id="post_message_43223972">
@@ -49,5 +57,5 @@ See y'all later on</div>
 	</table>
 </div>Not much, checking in before heading into work.
 		</div>
-</td></tr>
+</td><td>quote</td></tr>
 </table>
